--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "eslint-plugin-react": "^7.34.2",
+    "maplibre-gl": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vaul": "^0.9.1"
