--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "maplibre-gl": "^4.4.1",
+    "pmtiles": "^3.0.6",
     "pretty-bytes": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
