--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
+    "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.15.19",
     "eslint-plugin-react": "^7.34.2",
     "jszip": "^3.10.1",
