--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.15.19",
+    "autolinker": "^4.0.0",
     "eslint-plugin-react": "^7.34.2",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "maplibre-gl": "^4.4.1",
+    "papaparse": "^5.4.1",
     "pmtiles": "^3.0.6",
     "pretty-bytes": "^6.1.1",
     "react": "^18.2.0",
@@ -27,6 +30,8 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
